--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -108,7 +108,7 @@ We recommend that you switch to a non-root user to ensure data security.
    1. Change the username and password.
 
       ```bash
-      ## Only need to configure when remote login is required
+      ## Only need to configure when remote logon is required
       # user:
       #   username: your username
       #   password: your password if need
@@ -332,7 +332,7 @@ Go to the directory of the installation packages and install OceanBase Database 
    1. Change the username and password
 
       ```bash
-      ## Only need to configure when remote login is required
+      ## Only need to configure when remote logon is required
       # user:
       #   username: your username
       #   password: your password if need
