--- a/en-US/6.manage/0.log-in-oceanbase-tenant.md
+++ b/en-US/6.manage/0.log-in-oceanbase-tenant.md
@@ -50,7 +50,7 @@ obclient -h host IP address -P port number -u account name -p 'password' -D defa
 
 For details about connecting to the OceanBase Database through the OBClient, see [Connect to an OceanBase Database tenant by using OBClient](../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)).
 
-### Best practices for login
+### Best practices for logon
 
 * The root user has a high level of permissions and the abuse of the root user will pose a great security risk to the database. It is recommended that the root user only be used to manage other users and create dedicated O&M users and read-only users with the least permissions.
 
@@ -81,7 +81,7 @@ For details about connecting to the OceanBase Database through the OBClient, see
    
       A view whose name begins with `CDB_` is used for the `sys` tenant. From the `sys` tenant, you can query these views for the status of all tenants in the cluster. For example, the `CDB_OB_LS` view displays information about all log streams of all tenants in the cluster. Generally, for each `DBA_` view, there is a corresponding `CDB_` view in the `sys` tenant.
 
-   * Dynamic performance views: The name of a dynamic performance view begins with `GV$` or `V$`. A view whose name begins with `V$` displays only information about the server to which you have logged in, and a view whose name begins with `GV$` displays information about all servers in the tenant. In OceanBase 4.0, many dynamic performance views have been added to a user tenant. For example, the `GV$OB_UNITS` view can be used to query information about the distribution of units within the tenant. The dynamic performance view of the `sys` tenant displays information about all tenants in the cluster.
+   * Dynamic performance views: The name of a dynamic performance view begins with `GV$` or `V$`. A view whose name begins with `V$` displays only information about the server to which you have logged on, and a view whose name begins with `GV$` displays information about all servers in the tenant. In OceanBase 4.0, many dynamic performance views have been added to a user tenant. For example, the `GV$OB_UNITS` view can be used to query information about the distribution of units within the tenant. The dynamic performance view of the `sys` tenant displays information about all tenants in the cluster.
 
    To view information about nodes in the OceanBase cluster, run the following statement:
 
@@ -125,13 +125,13 @@ To view information on all tenants, log on as a system tenant and query the `DBA
 
 In MySQL mode, both the MySQL client and OBClient can be used to log on to a user tenant. However, in Oracle mode, only the OBClient can be used to log on to a user tenant. 
 
-The database connection strings for logging in to a user tenant are almost identical to those for logging in to the sys tenant. The only difference is that you need to change the tenant name in the login account.
+The database connection strings for logging in to a user tenant are almost identical to those for logging in to the sys tenant. The only difference is that you need to change the tenant name in the logon account.
 
 For user tenants in MySQL mode, the built-in data dictionary views and dynamic performance views of OceanBase Database are all located in the `oceanbase` namespace. For user tenants in Oracle mode, the built-in views of OceanBase Database are located under the SYS user. The names, fields, and use experience of views are the same in both modes.
 
 ## Log on to a meta tenant
 
-Meta tenants are used for internal management in OceanBase Database. For each user tenant created, a corresponding meta tenant is automatically created whose lifecycle is the same as that of the user tenant. A meta tenant cannot be logged in directly, but its information can be accessed through the user tenant and system tenant.
+Meta tenants are used for internal management in OceanBase Database. For each user tenant created, a corresponding meta tenant is automatically created whose lifecycle is the same as that of the user tenant. A meta tenant cannot be logged on directly, but its information can be accessed through the user tenant and system tenant.
 
 ## More information
 
