--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
@@ -153,7 +153,7 @@ Complete capabilities of the `upgrade_pre.py` script:
 -V, --version       Output version information and exit.
 -h, --host=name     Connect to host.
 -P, --port=name     Port number to use for connection.
--u, --user=name     User for login.
+-u, --user=name     User for logon.
 -p, --password=name Password to use when connecting to server. If password is
                     not given it's empty string "".
 -t, --timeout=name  Cmd/Query execute timeout(s).
@@ -247,7 +247,7 @@ Complete capabilities of the `upgrade_post.py` script:
 -V, --version       Output version information and exit.
 -h, --host=name     Connect to host.
 -P, --port=name     Port number to use for connection.
--u, --user=name     User for login.
+-u, --user=name     User for logon.
 -p, --password=name Password to use when connecting to server. If password is
                     not given it's empty string "".
 -t, --timeout=name  Cmd/Query execute timeout(s).
