--- a/en-US/6.manage/2.tenant-management/3.tenant-type.md
+++ b/en-US/6.manage/2.tenant-management/3.tenant-type.md
@@ -73,5 +73,5 @@ The following table compares the key characteristics of the three types of tenan
 | Tenant naming rules | sys | The name consists of letters, digits, and underscores (_). | The format is `META${user_tenant_id}`. For example, if the user tenant ID is 1002, the meta tenant name is META$1002. |
 | Data property | Private cluster data | Private cluster data | Private cluster data |
 | Scalability | Horizontal scaling is not supported. Only one log stream is available. | Horizontal and dynamic scaling are supported. | Horizontal scaling is not supported. Only one log stream is available. |
-| Tenant O&M | <ul><li>Create: Not supported</li><li>Delete: Not supported</li><li>Rename: Not supported</li><li>User logon: Supported</li><li>Modify locality: Supported</li><li>Change the primary zone: Supported</li></ul> | <ul><li>Create: Supported</li><li>Delete: Supported</li><li>Rename: Supported</li><li>User logon: Supported</li><li>Modify locality: Supported</li><li>Change the primary zone: Supported</li></ul> | <ul><li>Create: Not supported</li><li>Delete: Not supported</li><li>Rename: Not supported</li><li>User login: Not supported</li><li>Modify locality: Not supported</li><li>Change the primary zone: Not supported</li></ul> |
+| Tenant O&M | <ul><li>Create: Not supported</li><li>Delete: Not supported</li><li>Rename: Not supported</li><li>User logon: Supported</li><li>Modify locality: Supported</li><li>Change the primary zone: Supported</li></ul> | <ul><li>Create: Supported</li><li>Delete: Supported</li><li>Rename: Supported</li><li>User logon: Supported</li><li>Modify locality: Supported</li><li>Change the primary zone: Supported</li></ul> | <ul><li>Create: Not supported</li><li>Delete: Not supported</li><li>Rename: Not supported</li><li>User logon: Not supported</li><li>Modify locality: Not supported</li><li>Change the primary zone: Not supported</li></ul> |
 | External data access interface | Views in the sys tenant  | <ul><li>In the sys tenant:<ul><li>The `CDB_xxx` view and dynamic performance views display the data of all user tenants. </li><li>The `DBA_OB_TENANTS` view displays information about all user tenants. </li></ul></li><li> In a user tenant, the data of the user tenant is displayed. </li></ul> | You cannot log on to a meta tenant. To view the data on a meta tenant, you can access it from a user tenant or the sys tenant. <ul><li>In the sys tenant:<ul><li>The `CDB_xxx` view and dynamic performance views display the data of all meta tenants. </li><li>The `DBA_OB_TENANTS` view displays information about all meta tenants. </li></ul></li><li> The data managed by a meta tenant is displayed in the views of the corresponding user tenant. For example, the `DBA_OB_LS_LOCATIONS` view displays the routing information and `GV$OB_PARAMETERS` displays the parameter information. </li></ul> |
