--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
@@ -22,4 +22,4 @@ where
 * `10.xxx.xxx.1` indicates allowing only the client with the IP address `10.xxx.xxx.1` to connect to the tenant. 
 * `10.xxx.xxx.2` indicates allowing only the client with the IP address `10.xxx.xxx.2` to connect to the tenant. 
 
-When a user logs in, the OBServer node controls the login based on the `user_name`, `client_ip`, and `password`. 
+When a user logs on, the OBServer node controls the logon based on the `user_name`, `client_ip`, and `password`. 
