--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -1,10 +1,10 @@
 # Password complexity
 
-OceanBase Database allows you to set password complexity in MySQL mode, in order to verify the identity of login users, prevent malicious password attacks, thereby improving database security. This topic describes how to set password complexity for users who attempt to log on to OceanBase Database. 
+OceanBase Database allows you to set password complexity in MySQL mode, in order to verify the identity of logon users, prevent malicious password attacks, thereby improving database security. This topic describes how to set password complexity for users who attempt to log on to OceanBase Database. 
 
 ## Related variables
 
-In MySQL mode of OceanBase Database, you can set a series of tenant-level system variables to define password complexity rules. When a user is created or when a user changes the login password, the password is verified according to the system variable settings. If the password verification fails, an error is returned. The following table describes the related system variables:
+In MySQL mode of OceanBase Database, you can set a series of tenant-level system variables to define password complexity rules. When a user is created or when a user changes the logon password, the password is verified according to the system variable settings. If the password verification fails, an error is returned. The following table describes the related system variables:
 
 | Variable | Description | Value Range |
 |------------|---------|--------------|
