--- a/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -20,7 +20,7 @@ Currently, only the Oracle mode of OceanBase Database supports label security.
    obclient> ALTER USER LBACSYS ACCOUNT UNLOCK;
    ```
 
-2. Change the login password for the `LBACSYS` user. 
+2. Change the logon password for the `LBACSYS` user. 
 
    For security purposes, the password for the `LBACSYS` user is specified by the `sys` user. If you need to change this password later, simply specify a new one. 
 
