--- a/en-US/7.reference/4.development-reference/5.tableapi/1.introduction-to-tableapi/1.implementation-of-tableapi.md
+++ b/en-US/7.reference/4.development-reference/5.tableapi/1.introduction-to-tableapi/1.implementation-of-tableapi.md
@@ -39,13 +39,13 @@ In addition, TableAPI uses the same transaction framework and storage engine as 
 
 ## TableAPI operation types
 
-Operation types supported by OceanBase Database are login, execute, batch execute, and query. 
+Operation types supported by OceanBase Database are logon, execute, batch execute, and query. 
 
 The four operation types are respectively managed by four processor classes. A process handling function is inherited and derived from each operation type to process different RPC requests: 
 
 ![TableAPI operation types](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5046971461/p359502.png)
 
-* ObTableLoginRequest: the login operation type. It requires the username and password of the OceanBase Database tenant for authentication, which is similar to SQL statements. You can call other TableAPI operations only after successful authentication. 
+* ObTableLoginRequest: the logon operation type. It requires the username and password of the OceanBase Database tenant for authentication, which is similar to SQL statements. You can call other TableAPI operations only after successful authentication. 
 * ObTableOperationRequest: the execute type. Operations of this type include insert, update, replace, get, increment, and append. 
 * ObTableBatchOperationRequest: the batch execute type that consists of multiple execute operations. 
 * ObTableQueryRequest: the type for streaming queries, such as the range scan for a specific primary key. 
