--- a/en-US/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
+++ b/en-US/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
@@ -76,7 +76,7 @@ public class OHTableTest extends HTableTestBase {
         // The logon username. For example, you can set the logon username as root@sys#obcluster, in which root is the username, sys is the tenant name, and obcluster is the cluster name.
         conf.set("hbase.oceanbase.fullUserName", "your fullUserName");
         // The logon password. If no logon password is set, leave this field empty.
-        conf.set("hbase.oceanbase.password", "your login passwd");
+        conf.set("hbase.oceanbase.password", "your logon passwd");
         // The system username in the user@tenant format. For example, you can set the system username as proxyro@sys, in which proxyro is a system user inherent in the OceanBase cluster.
         conf.set("hbase.oceanbase.sysUserName", "your sysUserName");
         // The logon password of the system user.
