--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
@@ -113,12 +113,12 @@ OceanBase Database V3.2.3 improves the compatibility and performance of the data
 
 ### Parameters
 
-| Parameter | Default value | Change type | New default value | Description |
+| Parameter | Default value | New/Change | New default value | Description |
 |--------------------------------|-------|------|-------|----------------------------------------------------------------|
-| trace_log_slow_query_watermark | 100 ms | Modification | 1s | Specifies the execution time threshold for queries. A query whose execution time exceeds this threshold is recorded as a slow query in trace logs. The default value is changed to 1s to prevent massive logs from affecting the performance when the system is overloaded.  |
-| enable_merge_by_turn | True | Modification | False | Specifies whether to enable the multi-zone rotating compaction strategy. This strategy is disabled for business applications in most scenarios to speed up compactions.  |
-| clog_sync_time_warn_threshold | 100 ms | Modification | 1s | Specifies the time threshold of transaction log synchronization between the leader and follower. If the synchronization time exceeds the threshold, alerts are sent. The default value is modified based on the performance of business applications in most scenarios.  |
-| clog_sync_time_warn_threshold | 5 | Modification | 100 | Specifies the number of minor freezes between two major freezes.  The default value is increased to avoid business jitters caused by frequent major compactions.  |
+| trace_log_slow_query_watermark | 100 ms | Change | 1s | Specifies the execution time threshold for queries. A query whose execution time exceeds this threshold is recorded as a slow query in trace logs. The default value is changed to 1s to prevent massive logs from affecting the performance when the system is overloaded.  |
+| enable_merge_by_turn | True | Change | False | Specifies whether to enable the multi-zone rotating compaction strategy. This strategy is disabled for business applications in most scenarios to speed up compactions.  |
+| clog_sync_time_warn_threshold | 100 ms | Change | 1s | Specifies the time threshold of transaction log synchronization between the leader and follower. If the synchronization time exceeds the threshold, alerts are sent. The default value is modified based on the performance of business applications in most scenarios.  |
+| clog_sync_time_warn_threshold | 5 | Change | 100 | Specifies the number of minor freezes between two major freezes.  The default value is increased to avoid business jitters caused by frequent major compactions.  |
 
 ### Behavior changes
 
@@ -359,3 +359,148 @@ The MySQL-compatible version numbers in MySQL mode are displayed since OceanBase
 * The fourth digit in the version number V3.2.3 BP4 is increased to 1. The fourth digit in the version number is an internal version number and indicates the technical solution for the product upgrade.
 * We recommend that the number of partitions created on a single OBServer does not exceed 100,000.
 * The OBServer supports text editing by using prepared statements since OceanBase Database V3.2.3 BP5. ODP supports this feature since V3.2.7.1.
+
+## V3.2.3 BP6
+
+### Version information
+
+* Release date: November 15, 2022
+* Version: V3.2.3 BP6
+
+### Enhanced features
+
+* You can change the AccessKey ID and AccessKey Secret during data backup and restore. The backup feature of OceanBase Database allows you to specify an Alibaba Cloud Object Storage Service (OSS), Tencent Cloud Object Storage (COS), or Huawei Object Storage Service (OBS) bucket as the backup destination. However, you cannot modify the `access_id` or `access_key` parameter of the backup destination during the backup. If the AccessKey ID or AccessKey Secret is changed, you must stop the log backup and change the backup directory.  Therefore, this version provides the `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` command for you to modify the AccessKey ID and AccessKey Secret of the backup destination. The relevant content in GConf is updated and saved accordingly. Observe the following considerations when you use this command:
+   * Before you run the command to update the AccessKey ID and AccessKey Secret for accessing the OSS, COS, or OBS bucket, we recommend that you stop the ongoing second backup task. We also recommend that you delete the old AccessKey ID and AccessKey Secret one hour later after you run the command.   
+   * If you modify the AccessKey ID and AccessKey Secret during a second backup task, and the task is stuck, you must forcibly cancel the task and change the directory to resume the task.
+* You can specify the query range in an IN expression to improve the query performance. An IN expression can be considered a special equality expression. When a filter predicate contains an index, OceanBase Database first searches for data in the specified range in the indexed table based on the range determined by the predicate, thus avoiding full table scanning and improving the query efficiency.
+* Table API supports the Filter() and QueryAndMutate() functions. If you call only the Filter() function, it supports the LT, GT, LE, GE, NE, and EQ comparison operators. The FilterList() function is also supported. You can specify multiple Filter() functions in a FilterList() function by using the AND and OR relational operators.
+* Scalar functions are supported. A scalar function is a function that returns one value per row. For example, the ABS() function takes a numeric column as the argument and returns the absolute value of each value in the column.  Example: `SELECT {FN ABS(-1)} FROM DUAL;`
+* Partition routing is optimized. OceanBase Database Proxy (ODP) can obtain the default value of a column, which improves the routing accuracy.
+* Data security is enhanced. The Transparent Data Encryption (TDE) feature is integrated with Alibaba Cloud Key Management Service (KMS).
+
+### Fixed issues
+
+* The error code 4013 is returned because the checksum values of the primary table and the index table are inconsistent when the `SELECT FOR UPDATE` statement and a major compaction task are executed in parallel.
+* A major compaction task times out when a NULL value is written for the LOB data type during the major compaction.
+* The INSERT operation on a temporary table times out and exits without releasing the memory.
+* In Oracle mode, the error code 4016 is returned during the execution of a hierarchical query due to different parameter values.
+* In a public cloud environment, microblock prefetching increases I/Os when repeated I/O requests are sent and causes idle I/Os.
+* The OBServer node fails due to the abnormal closure of a cursor when the entity of the cursor is simultaneously used by multiple sessions at a high concurrency.
+* The error code 5889 is returned during the execution of the `GOTO LABEL` statement in a loop.
+* The execution of the `ALTER SYSTEM BACKUP DATABASE` statement times out because the schema information of the node is too much.
+* The progress of an Extended Architecture (XA) transaction is slow and all tenant threads are occupied due to the large number of participants in the transaction commit process, which causes excessive traffic of remote procedure calls (RPCs) between OBServer nodes.
+* When an SQL statement is executed in PS mode in an Oracle tenant, the following error message is returned because the value of the bound variable is not real: `field list ambiguously defined`.
+* When an SQL statement is executed in an Oracle tenant, the ORDER BY clause supports only valid columns. Constants or aliases are unsupported.
+* When a DDL statement is executed in PL, the data in the temporary table is not cleared.
+
+### Considerations
+
+* OceanBase Database V3.2.3 BP4 and later are compatible with the MySQL version number format, such as 5.7.25-OceanBase-v3.2.3.1. We recommend that you use the latest supporting tools.
+* The fourth digit in the version number of OceanBase Database V3.2.3 BP4 is increased to 1. The fourth digit in the version number is for internal use and indicates the product compatibility upgrade version.
+* We recommend that the number of partitions created on a single OBServer node does not exceed 100,000.
+* The OBServer supports text editing by using prepared statements since OceanBase Database V3.2.3 BP5. ODP supports this feature since V3.2.7.1.
+* OceanBase Database V3.2.3 BP6 and later can obtain the default values of a column to improve the routing accuracy. This feature is supported by ODP V3.2.9 and later.
+* OceanBase Database V3.2.3 BP6 and later support KMS storage encryption. To use this feature, you must upgrade libloblog to V3.2.4 or later, and then upgrade OceanBase Database to V3.2.3 BP6.
+
+  <main id="notice" type='notice'>
+  <h4>Notice</h4>
+  <p> OceanBase Database V3.2.3 BP5 can be directly upgraded to V3.2.4, but OceanBase Database V3.2.3 BP6 cannot. Instead, it can be upgraded to V3.2.4 BP1.  </p>
+  </main>
+
+## V3.2.3 BP7
+
+### Version information
+
+* Release date: January 19, 2023
+* Version: V3.2.3 BP7
+
+### Enhanced features
+
+* The `FROM_BASE64()` and `TO_BASE64()` functions are supported in MySQL mode.
+* The GRANT syntax can be used to grant privileges on the `DBMS_RESOURCE_MANAGER` system package.
+* The access performance of the `information_schema.table_constraints` virtual table is improved.
+
+### Compatibility changes
+
+The value range of the `internal_sql_execute_timeout` parameter is changed to [1000us, 1h]. The maximum value is changed from `10min` to `1h`, and the default value is still `30s`.
+
+### Fixed issues
+
+* Some tables created by using CTAS are mistakenly deleted.
+* Memory leak occurs when indexes are created on JSON generated columns.
+* When a plan hits the plan cache, the execution result of `MERGE INTO` is wrong.
+* Errors are returned when the LPAD function processes special characters whose ASCII codes are 0x03, 0x04, 0x05, and 0x06.
+* If SQL subqueries contain the same column names, the error `field list ambiguously defined` is returned during PS execution.
+* The out-of-bounds exception of `dbms_sql.column_value` causes an `extend_size` error, which further causes memory allocation and access errors.
+* If a freeze or minor compaction is triggered during the execution of `INSERT IGNORE INTO`, this statement may be hung up.
+* After a maintenance operation is performed on a template-based subpartition, such as partition creation, the newly created partition cannot be found in `DBA/ALL/USER_TAB_SUBPARTITIONS`.
+* An error is returned in an attempt to access `JSON PATH SEEK` of an internal subnode in an empty `JSON object`. This issue is not only involved in `json_extract` scenarios but also scenarios where `JSON paths` are used, such as `JSON PATH:where col1->'$."data"."a"' = '123'` in a WHERE condition.
+
+### Considerations
+
+* We recommend that the number of partitions created on a single OBServer node does not exceed 100,000.
+* The fourth digit in the version number V3.2.3 BP4 of OceanBase Database is increased to 1. The fourth digit in the version number is for internal use and indicates the product compatibility upgrade version.
+* OceanBase Database supports text editing by using prepared statements since V3.2.3 BP5. ODP supports this feature since V3.2.7.1.
+* Since OceanBase Database V3.2.3 BP6, the default values of a column can be obtained to improve the routing accuracy. ODP supports this feature since V3.2.9.
+* Since OceanBase Database V3.2.3 BP4, the MySQL version number format is supported, such as 5.7.25-OceanBase-v3.2.3.1. Use the latest components as required.
+* KMS storage encryption is supported since OceanBase Database V3.2.3 BP6. To use this feature, you must upgrade libloblog to V3.2.4 or later, and then upgrade OceanBase Database to V3.2.3 BP6.
+
+## V3.2.3 BP8
+
+### Version information
+
+* Release date: April 15, 2023
+* Version: V3.2.3 BP8
+
+### Enhanced features
+
+* In the case of node crash or leader switchover, the fast failure of SQL queries can be triggered to reduce the response latency.
+* OBStack is integrated into the OBServer installation package to obtain information about thread stacks in a lightweight and real-time manner.
+* The `_enable_reserved_user_dcl_restriction` parameter is provided to control whether general users can modify built-in users.
+
+### Parameter changes
+
+| Parameter | New/Change | Default value | Description                                                                                                                                                                                                                                                                                                                                                                           |
+| ----- | ----- | ----- |---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `_max_trx_ctx_count` | New | 700000 | The maximum number of transaction contexts allowed for a single participant. This is a cluster-level parameter. Value range: [100000, MAX).                                                                                                                                                                                                                                           |
+| `ob_query_switch_leader_retry_timeout` | New | 0 | The longest retry time allowed for a failed query, in microseconds (us). This is a tenant-level parameter. Value range: [0, unlimited). The value 0 indicates that the retry timeout check is disabled.                                                                                                                                                                               |
+| `_with_subquery` | New | 0 | The policy that the optimizer uses to control common table expressions (CTEs). This is a tenant-level parameter. Valid values: 0, 1, 2.<ul><li>  0: OPTIMIZE. The optimizer determines whether to materialize or expand the CTE. </li><li> 1: MATERIALIZE. The optimizer is forced to materialize the CTE. </li><li> 2: INLINE. The optimizer is forced to expand the CTE. </li></ul> |
+| `_xsolapi_generate_with_clause` | New | true | Specifies whether the optimizer extracts CTEs. This is a tenant-level parameter. Valid values: true, false.                                                                                                                                                                                                                                                                          |
+| `_optimizer_group_by_placement` | New | true | Specifies whether to enable the `GROUP BY PLACEMENT` rewrite algorithm of the optimizer. This is a tenant-level parameter. Valid values: true, false.                                                                                                                                                                                                                                |
+| `_enable_reserved_user_dcl_restriction` | New | false | Specifies whether built-in users can be modified only by built-in users. This is a cluster-level parameter. Valid values: true, false.                                                                                                                                                                                                                                               |
+
+### Fixed issues
+
+* The query range extraction fails and the query results are incorrect if a WHERE clause contains four or more indexed columns that meet the following conditions: the first column is an equivalent predicate, the second column a range predicate, the third column an IN expression, and the fourth column a random predicate.
+* When a subpartition is queried, the OBServer node returns empty routing information during the processing of default parameter exceptions. This causes the obproxy process to perform random routing and increases the query time.
+* In an XA transaction, the rollback of a failed nested SQL statement results in scheduler context leakage, which accumulates to exceed the upper limit and causes the unavailability of the transaction service on the corresponding node.
+* In a nested loop join, the execution plan fails if the `TEMP TABLE TRANSFORMATION` operator exists or pushdown predicates are generated for non-base table conditions.
+* In a multi-table join, the `unexpected operator type` error is returned if the right table of a nested loop join operator uses a global index and the Broadcast to Host Distribution (BC2HOST) algorithm is used.
+* If any indexes exist on columns C1, C2, and C3, and the SQL statement contains the `(C1 = ?  OR C1 = ? ...) AND C2 IN (...) AND  C3 ...` clause, the range extraction fails, resulting in incorrect results.
+* If you use a collection constructor in PL to initialize the memory for collection variables, the memory cannot be released when PL exits. This is because the memory lifecycle is managed at the tenant level and causes memory leaks.
+* If too many user-defined functions (UDFs) are compiled at a time, statement memory is consumed for type checking and memory bloat occurs.
+* Memory leaks occur during the parsing of the `SELECT` part in the `INSERT ALL` statement.
+* Some indexes are abnormal after a successful physical restore.
+* The following error is reported when you access a view that has a synonym: `ORA-04063: view 'xxx' has errors`.
+* The plan cache cannot be hit due to incorrect settings of parameterized SQL IDs, which increases the execution time of the INSERT statement.
+* Inaccurate error messages are returned if multiple layers of error stacks are nested in PL.
+* It takes a long time to acquire a plan because the `UPDATE IGNORE` statement is not handled during expression precomputation.
+* In Oracle mode, information about DBLink-related views cannot be displayed by running the DESC command.
+* In Oracle mode, when you use the TO_NUMBER function to convert a value of the NCHAR data type, the `Internal error` error is returned.
+* A syntax error is reported when the old engine or PX engine executes a stored procedure that contains the MERGE INTO statement where a DBLink is used to connect to a secondary cluster of the destination database.
+* SEQUENCE.NEXTVAL in the parallel DML (PDML) plan cannot be executed in parallel.
+* If column C1 is an indexed column, the WHERE clause contains `C1 in (xx) and C1 in (yy)`, and the number of parameters exceeds 128, the execution triggers memory leakage.
+* An error is reported during the execution in the following scenario: OCI is used to connect to the database and the attribute `OCI_ATTR_FETCH_ROWID` is set. A trigger that contains the `SELECT ... FOR UPDATE` statement is defined in the data table. The DML statements and the `SELECT ... FOR UPDATE` statement are sent to different servers for execution, and the DML statements hit the plan cache.
+* If a query statement contains two or more IN expressions and at least one vector expression, and both IN expressions have indexes, the extraction of query range fails and an error is reported.
+* When an SQL statement that contains a `last_insert_id()` expression in the WHERE clause is executed to query the primary key column or an index column, a full-table scan is performed during the query if the `last_insert_id()` expression is not precomputed.
+* If a row of a partitioned table contains a large object that overflows the storage capacity, an error is reported during the query.
+* In DBLink scenarios, unnesting errors occur due to an incomplete unnesting mechanism for nested joins.
+
+### Considerations
+
+* We recommend that the number of partitions created on a single OBServer node does not exceed 100,000.
+* The fourth digit in the version number V3.2.3 BP4 of OceanBase Database is increased to 1. The fourth digit in the version number is for internal use and indicates the technical solution for the product upgrade.
+* OceanBase Database supports text editing by using prepared statements since V3.2.3 BP5. OceanBase Database Proxy (ODP) supports this feature since V3.2.7.1.
+* Since OceanBase Database V3.2.3 BP6, the default values of a column can be obtained to improve the routing accuracy. ODP supports this feature since V3.2.9.
+* Since OceanBase Database V3.2.3 BP4, the MySQL version number format is supported, such as 5.7.25-OceanBase-v3.2.3.1. Use the latest components as required.
+* KMS storage encryption is supported since OceanBase Database V3.2.3 BP6. To use this feature, you must upgrade Libloblog to V3.2.4 or later, and then upgrade OceanBase Database to V3.2.3 BP6.
