--- a/en-US/9.release-notes/101.enterprise-edition-history-release/102.V3.1/98.ob-312.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/102.V3.1/98.ob-312.md
@@ -256,3 +256,21 @@ OceanBase Database V3.1.X is a series of stable versions released to support cus
 * Some partition groups are not backed up or the system considers the schema incorrect because the schema version retrieved upon the initiation of the data backup task is inaccurate. 
 
 * The `4013` error is returned when the SQL statement specifies different character set types for the server and the client. 
+
+## V3.1.2 BP9
+
+### Version information
+
+* Release date: July 28, 2022
+* Version: V3.1.2 BP9
+
+### Fixed issues
+
+* Values of CPU-related parameters in the `__all_virtual_server_stat` virtual table are inaccurate. 
+* In the online analytical processing (OLAP) business model, the execution efficiency of BROADCAST and NEST LOOP JOIN operators is low. 
+* The `index status not match` error exists in the logs of the RootServer module. 
+* If the server and client use different character sets, the error code 4013 is returned in data export due to excessive memory resource use. 
+* If an SQL statement in the `SQL_AUDIT` view contains unidentifiable characters, data cannot be exported. 
+* The background threads of an OBServer node use a global index but an initialization exception occurs, causing the OBServer node to crash. 
+* The value of the `min_buf_size` parameter does not incorporate the value of the `row_extend_size` parameter. As a result, the `Buffer not enough` error is returned for a large number of data queries. 
+* If the amount of data is large when a stored procedure is executed, `tmp_block_cache` occupies a large amount of memory space. As a result, an error indicating insufficient memory is returned. 
