--- a/en-US/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -1,7 +1,5 @@
 # OceanBase Database Enterprise Edition V2.2.77
 
-# RNDate#2021-05-08
-
 ## V2.2.77
 
 ### Version information
@@ -32,9 +30,7 @@ OceanBase Database V2.2.X is a generally available series that provides products
 
 * An error is returned during the type derivation of an expression that contains `NULL`.
 
-V2.2.77 BP1
---------------------------------
-
+## V2.2.77 BP1
 ### Version information
 
 * Release date: May 27, 2021.
@@ -43,7 +39,7 @@ V2.2.77 BP1
 
 ### Enhanced features
 
-* You can specify the maximum memory usage of partitions in a transaction by setting the tenant-level parameter `_tenant_max_trx_size`.
+You can specify the maximum memory usage of partitions in a transaction by setting the tenant-level parameter `_tenant_max_trx_size`.
 
 ### Fixed issues
 
@@ -67,9 +63,7 @@ V2.2.77 BP1
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP2
---------------------------------
-
+## V2.2.77 BP2
 ### Version information
 
 * Release date: June 4, 2021
@@ -100,8 +94,7 @@ V2.2.77 BP2
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP3
---------------------------------
+## V2.2.77 BP3
 
 ### Version information
 
@@ -147,8 +140,7 @@ V2.2.77 BP3
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP4
---------------------------------
+## V2.2.77 BP4
 
 ### Version information
 
@@ -180,8 +172,7 @@ V2.2.77 BP4
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP5
---------------------------------
+## V2.2.77 BP5
 
 ### Version information
 
@@ -221,8 +212,7 @@ V2.2.77 BP5
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP6
---------------------------------
+## V2.2.77 BP6
 
 ### Version information
 
@@ -252,8 +242,7 @@ V2.2.77 BP6
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP7
---------------------------------
+## V2.2.77 BP7
 
 ### Version information
 
@@ -293,8 +282,7 @@ V2.2.77 BP7
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP8
---------------------------------
+## V2.2.77 BP8
 
 ### Version information
 
@@ -340,8 +328,7 @@ V2.2.77 BP8
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP9
---------------------------------
+## V2.2.77 BP9
 
 ### Version information
 
@@ -401,8 +388,7 @@ V2.2.77 BP9
 
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
 
-V2.2.77 BP10
----------------------------------
+## V2.2.77 BP10
 
 ### Version information
 
@@ -576,3 +562,114 @@ V2.2.77 BP10
 
 * The primary and standby clusters can be upgraded only in maximum performance mode. If a cluster is in maximum protection mode or maximum availability mode, you must switch the cluster to maximum performance mode before you can upgrade the cluster.
 * PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform.
+
+## V2.2.77 BP14
+
+### Version information
+
+* Release date: December 04, 2022
+* Version: V2.2.77 BP14
+
+### Enhanced features
+
+* You can change the AccessKey ID and AccessKey Secret during data backup and restore. The backup feature of OceanBase Database allows you to specify an Alibaba Cloud Object Storage Service (OSS), Tencent Cloud Object Storage (COS), or Huawei Object Storage Service (OBS) bucket as the backup destination. However, you cannot modify the `access_id` or `access_key` parameter of the backup destination during the backup. If the AccessKey ID or AccessKey Secret is changed, you must stop the log backup and change the backup directory.  Therefore, this version provides the `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` command for you to modify the AccessKey ID and AccessKey Secret of the backup destination. The relevant content in GConf is updated and saved accordingly. Observe the following considerations when you use this command:
+
+   * Before you run the command to update the AccessKey ID and AccessKey Secret for accessing the OSS, COS, or OBS bucket, we recommend that you stop the ongoing second backup task. We also recommend that you delete the old AccessKey ID and AccessKey Secret one hour later after you run the command. 
+   * If you modify the AccessKey ID and AccessKey Secret during a second backup task, and the task is stuck, you must forcibly cancel the task and change the directory to resume the task. 
+
+* The following three fields are added to the `v$sysstat` view to optimize hotspot row observation.
+   * `TRANS_ELR_ENABLE_COUNT`: the number of transactions for which early lock release (ELR) can be enabled. 
+   * `TRANS_ELR_UNABLE_COUNT`: the number of transactions for which ELR is disabled. 
+   * `READ_ELR_ROW_COUNT`: the number of rows that support ELR. The number of rows that support ELR is increased. 
+
+* `ob_admin` supports OBS. 
+
+### Fixed issues
+
+* The execution of the `to_hex()` function during stored procedure debugging causes server failures. 
+* When system variables fail to be loaded, the session is abnormally released, and this causes a server failure. 
+* The time zone used by the backup logic is different from that used by the restore logic. As a result, the default values of restored table fields lag behind those of the original table by 8 hours. 
+* When the `_enable_fulltext_index` parameter is set to `OFF`, creating a full-text index succeeds, which is abnormal. 
+* When the special characters "+/" are used in a LIKE statement, the query result of an index scan is incorrect. 
+* When an inner join subquery is executed, the query results in OceanBase Database and MySQL Database are inconsistent. 
+* In an outer join, the number of rewritten rows is inconsistent with the number of queried rows. 
+* The number of constraints on the `CONCAT()` function is negative, which is abnormal. 
+* When the batch deletion operation of COS is called, the system cannot determine whether all objects are deleted. 
+* When you delete a large number of `Fail to erase key from cache` entries from the `observer.log` file, an error is returned. 
+* In non-strict mode, the execution result of creating an index is different from that of adding an index. 
+* The `use_hash_aggregation` hint does not take effect. 
+* After schema history file recycling is enabled, physical restore may fail. 
+* The backup may fail due to an incorrect session count in the independent backup and restore subprocess. 
+* During the procedural language (PL) execution by using the `OCI_BATCH_ERRORS` handle, a data storage error occurs due to primary key conflicts. 
+* If slogs and SSTables are located on the same disk, the `clog disk is almost full` error is returned during slog initialization. 
+
+### Upgrade and limitations
+
+* The primary and standby clusters can be upgraded only in maximum performance mode. If a cluster is in maximum protection mode or maximum availability mode, you must switch the cluster to maximum performance mode before you can upgrade the cluster. 
+* PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform. 
+* If you have enabled the dynamic AccessKey ID/AccessKey Secret setting feature for data backup and restore, an upgrade to V3.x is not supported. 
+
+## V2.2.77 BP15
+
+### Version information
+
+* Release date: January 10, 2023
+* Version: V2.2.77 BP15
+
+### Enhanced features
+
+The `FROM_BASE64()` and `TO_BASE64()` functions are supported in MySQL mode. 
+
+### Compatibility changes
+
+In MySQL mode, the ORDER BY or LIMIT operator cannot be used for multi-table updates, which is consistent with MySQL. 
+
+### Fixed issues
+
+* When you use an IN expression to query a partitioned table, the calculated result set is incorrect. 
+* The migration of an empty resource unit causes the leader to get stuck. 
+* When an execution plan hits the plan cache, the execution result of MERGE INTO is incorrect. 
+* Memory leak occurs when indexes are created on JSON generated columns. 
+* Backup sets fail to be cleared during automatic backup clearing. 
+* In Oracle mode, when a package uses a cursor for loop operations, the error code 4179 is returned. 
+* The standby database fails to restart due to an slog replay error. 
+* Errors are returned when the LPAD function processes special characters whose ASCII codes are 0x03, 0x04, 0x05, and 0x06. 
+* During the clearing of expired backups, the clearing task remains in the DOING state and cannot be stopped. 
+* If the execution of a transaction is interrupted, the transaction ID recorded in SQL audit logs is incorrect. 
+
+### Upgrade and limitations
+
+* The primary and standby clusters can be upgraded only in maximum performance mode. If a cluster is in maximum protection mode or maximum availability mode, you must switch the cluster to maximum performance mode before you can upgrade the cluster. 
+* PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform. 
+* If you have enabled the dynamic AccessKey ID/AccessKey Secret setting feature for data backup and restore, an upgrade to V3.x is not supported. 
+
+## V2.2.77 BP16
+
+### Version information
+
+* Release date: February 14, 2023
+* Version: V2.2.77 BP16
+
+### Enhanced features
+
+The GROUP COMMIT capability is supported for OBKV to update hotspot rows. To better handle highly concurrent updates of hotspot rows, the server that supports GROUP COMMIT aggregates concurrent updates to prevent repeated row lock application and release for each operation. This saves the wait time due to row lock contention, and speeds up the hotspot row update. 
+
+### Fixed issues
+
+* The execution of the `USE DATABASE` statement triggers implicit commit of transactions. 
+* The SELECT statement in PL cannot read the data that has not been committed. 
+* Some indexes are abnormal after a successful physical restore. 
+* When you create a view, you must also specify an alias for ROWID in the SELECT clause even if you have specified column names. 
+* The BATCH GET request of HBaseAPI takes a long time to complete. 
+* The update of a primary key column in a TableAPI operation results in data inconsistency between the primary table and the index table. 
+* An error is reported when TableAPI automatically updates fields with default values of `CURRENT_TIMESTAMP` or `ON UPDATE CURRENT_TIMESTAMP`. 
+* An error is reported when the estimated result length of the `REGEXP_REPLACE` function is greater than the maximum allowable value because of excessively strict program check. 
+* The binary comparison of the `FIND_IN_SET(binary 'b','a,B,c,d')` function does not take effect in MySQL mode. 
+* The execution of the `FIND_IN_SET` function is slow in MySQL mode. 
+* The `backup_piece` files that are expected to be cleaned up are not deleted in a normally scheduled automatic cleanup task. 
+
+### Upgrade and limitations
+
+* The primary and secondary database clusters can be upgraded only in maximum performance mode. If a cluster is in maximum protection mode or maximum availability mode, you must downgrade the cluster to maximum performance mode before you can upgrade the cluster. 
+* If you have enabled the dynamic AccessKey ID (AK)/AccessKey secret (SK) setting feature for data backup and restore, you cannot upgrade OceanBase Database to V3.x. 
+* PL debugging is supported only for x86 platforms. We recommend that you do not use this feature on an ARM platform. 
