--- a/en-US/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
@@ -1,11 +1,12 @@
 # OceanBase Database Enterprise Edition V4.1.0
 
-## Version information
+## V4.1.0
+### Version information
 
 * Release date: March 31, 2023
 * Version: V4.1.0
 
-## Overview
+### Overview
 
 OceanBase Database Enterprise Edition V4.0 is a beta version with a comprehensively upgraded distributed database architecture. OceanBase Database Enterprise Edition V4.1 is oriented to public cloud and open source scenarios. In addition to its rich variety of features, this version is further optimized and enhanced in compatibility with MySQL 8.0 as well as the performance and ease of use at reduced costs. This version is also designed to support large-scale replication, and therefore can be comprehensively commercialized.
 This version provides the following core capabilities:
@@ -51,16 +52,16 @@ This version provides the following core capabilities:
    * The monitoring capability is improved. Full-link Trace and session status monitoring and diagnostics are supported.
    * Storage persistence is optimized. Adaptive compactions are supported and space optimization is implemented for small tables.
    * Views are standardized. Totally 73 data dictionary views and dynamic performance views are improved.
-   * Online upgrades of OceanBase V4.0 series are supported.
+   * Online upgrades of OceanBase Database V4.0 series are supported.
    * Statistics are collected in real time.
 
 * **Product form**
 
    A standalone edition is released.
 
-## Updated features
+### Updated features
 
-### Enhanced features
+#### Enhanced features
 
 * Enhanced online DDL operations
 
@@ -88,7 +89,6 @@ This version provides the following core capabilities:
    Therefore, I/O resources and CPU resources are incorporated into the Resource Manager framework for unified resource isolation on the UI.
 
    OceanBase Database V4.1 allows you to use the `DBMS_RESOURCE_MANAGER` package to customize resource isolation strategies for I/O resources. Specifically, you can call `CREATE_PLAN_DIRECTIVE` to set the `MIN_IOPS`, `MAX_IOPS`, and `WEIGHT_IOPS` parameters to define an isolation plan. You can define IOPS isolation plans for both Oracle and MySQL tenants. For more information, see [Resource isolation overview](../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md).
-   <!--and [Configure SQL statement-level resource isolation (MySQL mode)](../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/3.resource-isolation-at-sql-level-of-mysql-mode.md).-->
 
 * Support for the Latin1 character set
 
@@ -98,13 +98,13 @@ This version provides the following core capabilities:
 
    A table lock allows you to lock a table or partition in a specified manner to avoid data corruption caused by concurrent operations on the table or partition. OceanBase Database V4.1 supports more online DDL operations. Therefore, the table lock feature is provided to ensure data accuracy in concurrent DDL and DML operations. The LOCK TABLE syntax is supported in SHARE and EXCLUSIVE lock modes. Deadlocks due to lock contention can be detected.
 
-### Enhanced compatibility
+#### Enhanced compatibility
 
-#### Compatibility with MySQL
+##### Compatibility with MySQL
 
 * Compatibility with MySQL 8.0 in system functions, variables, and SQL modes is improved.
 
-   Most features of MySQL 5.7 are supported in OceanBase Database V4.0 and earlier versions. As OceanBase gains more experienced MySQL users in ApsaraDB for OceanBase and OceanBase Database Community Edition, the business system becomes more dependent on the features of MySQL 8.0. MySQL 8.0 has been released for over six years and its features are mature. Therefore, OceanBase Database systematically supports the features of MySQL 8.0 since V4.1 in terms of:
+   Most features of MySQL 5.7 are supported in OceanBase Database V4.0 and earlier versions. As OceanBase Database gains more experienced MySQL users in ApsaraDB for OceanBase and OceanBase Database Community Edition, the business system becomes more dependent on the features of MySQL 8.0. MySQL 8.0 has been released for over six years and its features are mature. Therefore, OceanBase Database systematically supports the features of MySQL 8.0 since V4.1 in terms of:
 
    * System functions
       * Character operation functions: BIN_TO_UUID(), CHARACTER_LENGTH(), LOAD_FILE(), IS_UUID(), UUID_TO_BIN(), and OCTET_LENGTH()
@@ -131,7 +131,7 @@ This version provides the following core capabilities:
 
    In a MySQL database, the column information of tables and views is stored as metadata in a data dictionary. You can query the `INFORMATION_SCHEMA.COLUMNS` view for the column information. OceanBase Database persistently stores only the column information of tables. OceanBase Database V4.1 avoids parsing complex view dependencies by dynamically parsing view definitions and displays the column information of views in the `INFORMATION_SCHEMA.COLUMNS` view. In Oracle mode, you can query the `DBA_TAB_COLS` view for column information of views.
 
-#### Compatibility with Oracle
+##### Compatibility with Oracle
 
 * Support for JSON data types
 
@@ -148,13 +148,13 @@ This version provides the following core capabilities:
 
 * Support for writes to an Oracle database by using a DBLink
 
-   OceanBase Database V3.2 supports reads from an Oracle database by using a DBLink. OceanBase Database V4.1 supports writes between OceanBase databases and from an OceanBase database to an Oracle database by using a DBLink based on the Oracle Call Interface (OCI) driver and eXtended Architecture (XA) transaction capabilities. This avoids large-scale rewrites of the business logic in actual business scenarios of customers. Supported DML statements include INSERT, DELETE, UPDATE, and MERGE INTO. However, writes by using a DBLink are not supported in PL now.
+   OceanBase Database V3.2 supports read-only access to Oracle databases through a DBLink. When it comes to real-life database replacement scenarios, businesses often need to avoid making extensive changes to their existing logic. To address this challenge, OceanBase Database V4.1 has expanded its capabilities to enable write access between OceanBase databases and Oracle databases, using Oracle Call Interface (OCI) drivers and XA transaction capabilities. This is a significant advantage for businesses as it eliminates the need to make major changes to their existing logic during database replacement. The supported DML statements include INSERT, DELETE, UPDATE, and MERGE INTO. Note that writes using a DBLink are currently not supported in PL.
 
 * Support for Chinese character sets and collations
 
    This version supports Chinese character sets and collations and the NLSSORT() sorting function. You can sort data by Pinyin, strokes, or radicals of Chinese characters.
 
-### Improved performance
+#### Improved performance
 
 * The data import performance is improved.
 
@@ -177,7 +177,7 @@ This version provides the following core capabilities:
    * The execution of Index Skip Scan is optimized. When the NDV operator is used to calculate more than 0.5 million rows of data, the performance can be improved by about 10 times.
    * The parallel execution of the TRUNCATE TABLE statement is optimized, improving the statement execution efficiency by about 10 times.
 
-### Enhanced stability
+#### Enhanced stability
 
 * The large transaction processing capability is improved.
 
@@ -195,7 +195,7 @@ This version provides the following core capabilities:
 
    In earlier versions of OceanBase Database, the size of a stored LOB is limited to 48 MB. This poses a forcible restriction on the use of LOBs. In this upgraded architecture, an LOB macroblock is split into multiple LOB metadata records for storage on the storage layer. When the data is retrieved, these metadata records are aggregated into a continuous buffer, which is then returned to the SQL layer for processing. This breaks the limit on the data storage size and extends the LOB size to 512 MB by using regular SQL statements. In Oracle mode, the LOB size can be extended to a TB level by using the DBMS_LOB package.
 
-### Enhanced high availability
+#### Enhanced high availability
 
 * Physical Standby Database based on archive logs is supported.
 
@@ -216,9 +216,9 @@ This version provides the following core capabilities:
 
    Multitenancy is a core capability of OceanBase Database. In most customer systems, multiple tenants are created in each cluster. Each cluster represents a business unit. The backup frequency and strategy vary with the business type and importance. OceanBase Database V4.1 supports tenant-level backup and restore. You can restore the backup data to a new tenant. In addition, the backup snapshot retention strategies are optimized to reduce the impact of backup process on disk space. Data backups and log backups are stored in different directories, which allows you to separately store them on media that differ in performance.
 
-### Enhanced O&M capabilities
+#### Enhanced O&M capabilities
 
-* Online upgrades of OceanBase V4.0 series are supported.
+* Online upgrades of OceanBase Database V4.0 series are supported.
 
    OceanBase Database V4.0 is an architecturally upgraded version, in which data storage, internal tables, views, parameters, and some behaviors are incompatible with those in earlier versions. Therefore, OceanBase Database cannot be directly upgraded from V3.x to V4.0. We recommend that you use OceanBase Migration Service (OMS) to migrate the data logic. System data compatibility and physical online upgrades are the key capability objectives of OceanBase Database since V4.1. These capabilities also meet customer requirements for upgrades, reduce the upgrade complexity and costs, and facilitate the application and promotion of OceanBase Database V4.1.
 
@@ -247,7 +247,7 @@ This version provides the following core capabilities:
    * Monitoring is optimized to support Full-link Trace.
 
    OceanBase Database has been put into business operation for a long time. Its internal data access links are very complex. When a timeout error occurs, it is often impossible to quickly locate the root cause. Therefore, an experienced O&M engineer is required to troubleshoot each process, which is hardly responsive and affects the O&M efficiency.
-   OceanBase Database V4.0 provides the Full-link Trace mechanism to help you locate errors in all processes of the whole link, from the business application to the client driver such as the Java Database Connectivity (JDBC) client or Oracle Instant Client (OCI), ODP, and OBServer node. You can specify the `MODULE`, `ACTION`, `CLIENT_INFO`, and `CLIENT_IDENTIFIER` parameters for applications by using PL/SQL statements or OBClient to identify the link in use. An O&M engineer can use a PL/SQL package to check related views and determine whether to enable Full-link Trace and set diagnosis information output strategies. Diagnosis logs are generated and stored in ODP and OBServer log files in the OpenTracing data model. The engineer can parse the diagnosis logs to obtain relevant diagnosis information such as the execution time of each SQL and transaction in the whole link.
+   OceanBase Database V4.0 provides the Full-link Trace mechanism to help you locate errors in all processes of the whole link, from the business application to the client driver such as the Java Database Connectivity (JDBC) client or OCI driver, ODP, and OBServer node. You can specify the `MODULE`, `ACTION`, `CLIENT_INFO`, and `CLIENT_IDENTIFIER` parameters for applications by using PL/SQL statements or OBClient to identify the link in use. An O&M engineer can use a PL/SQL package to check related views and determine whether to enable Full-link Trace and set diagnosis information output strategies. Diagnosis logs are generated and stored in ODP and OBServer log files in the OpenTracing data model. The engineer can parse the diagnosis logs to obtain relevant diagnosis information such as the execution time of each SQL and transaction in the whole link.
    OceanBase Database V4.1 supports the SHOW TRACE statement. You can specify the `ob_enable_show_trace` variable to perform interactive analysis and show the execution path of the previous SQL statement on the OBServer node.
 
 * The session status can be monitored and diagnosed based on the Active Sessions History (ASH) report.
@@ -264,22 +264,21 @@ This version provides the following core capabilities:
    * Use the DBMS_STATS package or the ANALYZE statement to manually trigger statistics collection.
    * Configure scheduled tasks to automatically collect statistics.
    * Automatically collect statistics when the data amount exceeds the specified threshold.
-   
-  OceanBase Database V4.1 supports online statistics collection. You can enable this feature by using the `_optimizer_gather_stats_on_load` system variable or hints. If the business system supports the CTAS or INSERT statement, OceanBase Database updates incremental statistics in real time. This avoids system overheads caused by full table scans performed in regular statistics collection.
+   OceanBase Database V4.1 supports online statistics collection. You can enable this feature by using the `_optimizer_gather_stats_on_load` system variable or hints. If the business system supports the CTAS or INSERT statement, OceanBase Database updates incremental statistics in real time. This avoids system overheads caused by full table scans performed in regular statistics collection.
 
 * Storage persistence is optimized.
 
    * Adaptive compaction: A compaction consumes a large number of I/O operations and CPU resources. Therefore, different compaction strategies are needed in different business scenarios. In the log-structured merge (LSM) storage system, the core objective of compactions is to achieve an optimal balance among write amplification, read amplification, and space amplification. In the adaptive compaction strategy, the system collects statistics about and analyzes the historical minor compactions and query operations performed on a table to extract the characteristics of the table, determines whether to schedule a major compaction for this table based on these characteristics, and completes a major compaction that is imperceptible to users.
    * Table space optimization: If a small table is split into many partitions, storage amplification appears in macroblock storage. This is prone to result in insufficient disk space when a large number of partitions exist. Multiple small SSTables are stored in a physical macroblock for compaction and storage. This achieves a utilization of about 4% and a fragment ratio of about 1.5% for the macroblock when a small table is split into many partitions, significantly improving the disk utilization.
 
-### Product form
+#### Product form
 
 A standalone edition is released.
 
 Based on the integrated architecture of OceanBase Database V4.0 that supports both standalone and distributed deployment, we released a standalone edition for OceanBase Database V4.1. The standalone edition can be deployed by using OCP or OceanBase Deployer (OBD), enabling independent software vendors (ISVs), small-sized customers, and community users to quickly get started with the new features of OceanBase Database V4.1. When the standalone edition can no longer meet your project requirements, business requirements, or high availability requirements, you can upgrade the standalone edition to a distributed edition online with ease.
-<!--For more information, see [Deploy OceanBase Database on a single OBServer node](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md).-->
+<!-- For more information, see [Deploy OceanBase Database on a single OBServer node](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md). -->
 
-## Performance report
+### Performance report
 
 The following table shows the performance test data of OceanBase Database Community Edition V4.0.
 
@@ -302,7 +301,7 @@ The following table shows the performance test data of OceanBase Database Commun
 | OBServer (V4.0) | OBServer (OceanBase_CE 4.0.0.0)<br>REVISION: 103000022023011215-05bbad0279302d7274e1b5ab79323a2c915c1981<br>BUILD_TIME: Jan 12 2023 15:28:27 |
 | ODP (V4.0) | ODP (OceanBase 4.0.0 5)<br>REVISION: 1-local-9d5c90e562c61d9fcf8894993187aa20239db47e<br>BUILD_TIME: Oct 28 2022 23:01:19 |
 
-### Sysbench OLTP benchmark
+#### Sysbench OLTP benchmark
 
 **Test plan:**
 
@@ -359,7 +358,7 @@ The following table shows the performance test data of OceanBase Database Commun
 | 512 | 383006.31 | 33.12 | 479109.44 | 25.74 |
 | 1024 | 389587.53 | 104.84 | 561333.10 | 48.34 |
 
-### TPC-C benchmark test with BenchmarkSQL
+#### TPC-C benchmark test with BenchmarkSQL
 
 **Test plan:**
 
@@ -374,6 +373,7 @@ The following table shows the performance test data of OceanBase Database Commun
 **Software versions:**
 mysql-connector-java-5.1.47
 BenchmarkSQL V5.0
+
 **Test configuration:**
 
 * warehouse = 1000
@@ -393,7 +393,7 @@ BenchmarkSQL V5.0
 | tpmC (NewOrders) | 307,021.0 | 332559.26 |
 | tpmTOTAL | 682,517.67 | 738374.78 |
 
-### TPC-H benchmark
+#### TPC-H benchmark
 
 **Test plan:**
 
@@ -434,7 +434,7 @@ BenchmarkSQL V5.0
 | Q22 | 1.24 | 1.09 |
 | Total | 28.16 | 23.21 |
 
-### TPC-DS benchmark
+#### TPC-DS benchmark
 
 **Test plan:**
 
@@ -552,9 +552,9 @@ BenchmarkSQL V5.0
 | Q99 | 0.70 |
 | Total time | 160.83 |
 
-## Compatibility changes
+### Compatibility changes
 
-### Product behavioral changes
+#### Product behavioral changes
 
 The following table describes the changes made based on OceanBase Database Community Edition V4.0.
 
@@ -565,7 +565,7 @@ The following table describes the changes made based on OceanBase Database Commu
 | UNUSABLE indexes | 4.1 | UNUSABLE indexes that are generated when partitions are deleted cannot be restored by using the backup and restore operation.  |
 | MAJOR FREEZE | 4.1 | You can initiate a major compaction task for a specific tenant, tablet, or table.  |
 
-### Views, entity tables, and virtual tables
+#### Views, entity tables, and virtual tables
 
 The following table describes the changes made based on OceanBase Database Community Edition V4.0.
 
@@ -597,7 +597,7 @@ The following table describes the changes made based on OceanBase Database Commu
 
 For more information, see [System views](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md).
 
-### Parameter changes
+#### Parameter changes
 
 The following table describes the changes made based on OceanBase Database Community Edition V4.0.
 
@@ -628,13 +628,13 @@ The following table describes the changes made based on OceanBase Database Commu
 | `_ob_plan_cache_auto_flush_interval` | The interval for periodically flushing the plan cache.  | Default value: 0s, which specifies not to automatically flush the plan cache.  | 4.1 |
 | `enable_user_defined_rewrite_rules` | Specifies whether to enable user-defined rules.  | Default value: `False`.  | 4.1 |
 
-## Note
+### Note
 
 * An online upgrade from OceanBase Database V3.x to OceanBase Database V4.x is not supported.
 * You can use OMS to migrate the data logic of OceanBase Database V3.x to OceanBase Database V4.1.
 * An online upgrade from OceanBase Database V4.0 to OceanBase Database V4.1 is supported.
 
-## Supported components
+### Supported components
 
 The following table describes the recommended component versions for OceanBase Database V4.1.0.
 
@@ -652,7 +652,7 @@ The following table describes the recommended component versions for OceanBase D
 | OceanBase Client (OBClient) | V2.2.2 |
 | OBD | V1.6.0 |
 
-## Limitations
+### Limitations
 
 * In OceanBase Database V4.1.0, load balancing is not supported after replica scale-out. Therefore, data that already exists before the scale-out cannot be distributed to the newly added nodes. This issue will be resolved in V4.2.
 * OceanBase Database V4.1.0 does not support replicated tables. This issue will be resolved in V4.2.
@@ -661,3 +661,28 @@ The following table describes the recommended component versions for OceanBase D
 * OceanBase Database V4.1.0 supports only full-featured replicas. Other types of replicas such as read-only replicas will be supported in later versions.
 * In OceanBase Database V4.1.0, you can only increase the number of resource units (UNIT_NUM) of a tenant. You will be allowed to decrease the number of resource units in later versions.
 * In OceanBase Database V4.1.0, if you execute the DROP DATABASE statement to drop a database that contains more than 200 tables, the operation may fail. We recommend that you first execute DROP TABLE and then DROP DATABASE. This issue will be resolved in V4.2.
+
+## V4.1.0 BP1
+
+### Version information
+
+* Release date: May 8, 2023
+* Version: V4.1.0 BP1
+
+### Parameter changes
+
+| Parameter | New/Change | Default value | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|------|---------|--------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| memory_limit | Change | 0 | The maximum memory for an OBServer node. When the default value 0 is used, the available memory size is calculated by using the following formula: `Size of the physical memory of the server × memory_limit_percentage`. This is a cluster-level parameter. The value range is changed from [4 GB, +∞) to [1 GB, +∞). <main id="notice" type='notice'><h4>Note</h4><p>If the OBServer node starts in arbitration service mode, you can set the minimum value to 1 GB. However, if the OBServer node starts in other modes, we recommend that you set the minimum value to 4 GB for the sake of stability. </p></main> |
+| _easy_memory_limit | Change | 4 GB | The maximum memory for the easy module of an OBServer node. The default value is 4 GB. This is a cluster-level parameter. The value range is changed from [1 GB, +∞) to [256 MB, +∞). <main id="notice" type='notice'><h4>Note</h4><p>If the OBServer node starts in arbitration service mode, you can set the minimum value to 256 MB. However, if the OBServer node starts in other modes, we recommend that you set the minimum value to 1 GB for the sake of stability. </p></main>                                                                                                                              |
+
+### Fixed issues
+
+* In some data distribution architectures, if the amount of encoded data written to the memory buffer exceeds 2 MB during a major compaction, the major compaction is blocked. 
+* When columns are deleted in parallel tasks, the `macro data seq` command generates duplicate data and causes the backup to fail. 
+* When a stored procedure calls another stored procedure in a system package, the PL plan cache is not hit. 
+* If more than 16 virtual IP addresses are configured for an NIC, the operating system fails to obtain the IP address of the NIC, so that the OBServer node fails to start. 
+* When small-specification (2c4g) Elastic Compute Service (ECS) instances are used, the arbitration service cannot start because of insufficient resources. This issue is fixed from two aspects. In the system aspect, the lower limit of the required resources is reduced. In the O&M aspect, O&M engineers need to pay attention to the value of the `vm.min_free_kbytes` parameter, so as to prevent the started process from being killed by the operating system because the remaining resources are less than the lower limit. 
+* The `NULLABLE` and `IS_VISIBLE` fields in the `information_schema.STATISTICS` view are incompatible with OceanBase Database V4.0.0. 
+* No error is reported or the error is not reported in the same form as MySQL when the REGEXP function contains both binary and non-binary parameters. 
+* The use of an index created on a generated column deteriorates the performance. 
