--- a/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/1.python-application-of-mysql-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/1.python-application-of-mysql-model.md
@@ -12,7 +12,7 @@ When you create an application in Python 3.x, you must connect to and use OceanB
 
 ### Step 1: Obtain a database connection string
 
-Obtain a database connection string from a database deployment engineer or administrator. Example:
+Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
 obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
@@ -20,7 +20,7 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
 
-Parameters:
+The parameters are described as follows:
 
 * **-h**: the IP address for connecting to OceanBase Database, which is sometimes the IP address of an OceanBase Database Proxy (ODP).
 * **-u**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The default tenant of a cluster is 'sys', and the default administrator of a tenant is 'root'. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
@@ -117,7 +117,7 @@ When you create an application in Python 2.x, you must connect to and use OceanB
 
 ### Step 1: Obtain a database connection string
 
-Obtain a database connection string from a database deployment engineer or administrator. Example:
+Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
 obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
@@ -125,7 +125,7 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
 
-Parameters:
+The parameters are described as follows:
 
 * **-h**: the IP address for connecting to OceanBase Database, which is sometimes the IP address of an OceanBase Database Proxy (ODP).
 * **-u**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The default tenant of a cluster is 'sys', and the default administrator of a tenant is 'root'. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
