--- a/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
@@ -1,10 +1,10 @@
 # Build a C application
 
-This topic describes how to build a C application with OceanBase Database and OceanBase Connector/C.
+This topic describes how to build a C application with MySQL Connector/C (libmysqlclient).
 
 ## Prerequisites
 
-Before you install OceanBase Connector/C, make sure that you have set up the basic database development environment that meets the following requirements:
+Before you install MySQL Connector/C (libmysqlclient), make sure that you have set up the basic database development environment that meets the following requirements:
 
 * The GNU Compiler Collection (GCC) version is 3.4.6 or later. Version 4.8.5 is recommended.
 
@@ -14,113 +14,32 @@ Before you install OceanBase Connector/C, make sure that you have set up the bas
 
 ### Step 1: Obtain a database connection string
 
-Obtain a database connection string from a database deployment engineer or administrator. Example:
+Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
-obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
+obclient -h100.88.xx.xx -uroot@test -p****** -P2881 -Doceanbase
 ```
 
-The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
+The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string to verify that the parameters are correct.
 
-Parameters:
+The parameters are described as follows:
 
 * **-h**: the IP address for connecting to OceanBase Database, which is sometimes the IP address of an OceanBase Database Proxy (ODP).
-* **-u**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The default tenant of a cluster is 'sys', and the default administrator of a tenant is 'root'. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
+* **-u**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The default tenant of a cluster is `sys`, and the default administrator of a tenant is `root`. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
 * **-p**: the user password.
 * **-P**: the port for connecting to OceanBase Database, which is also the listening port of the ODP.
 * **-D**: the name of the database to be accessed.
 
-### Step 2: Install the OceanBase Connector/C driver
+### Step 2: Install the MySQL Connector/C driver
 
-#### Use RPM packages
+Install the MariaDB client by using YUM:
 
-Obtain the installation packages of [OceanBase Connector/C](https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/libobclient-2.2.1-2.el7.x86_64.rpm) (also known as `libobclient`) and [OBClient](https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/obclient-2.2.0-6.el7.x86_64.rpm). For more information about the installation packages of other versions, visit the [open source image site of Alibaba Cloud](http://mirrors.oceanbase.com/). You can find the required installation packages in the image repository based on your system version.
-
-1. Install OceanBase Connector/C.
-
-   ```bash
-   sudo rpm -ivh libobclient-xx.x86_64.rpm
-   ```
-
-2. Install OBClient.
-
-   ```bash
-   sudo rpm -ivh obclient-xx.x86_64.rpm
-   ```
-
-<main id="notice" type='explain'>
-  <h4>Note</h4>
-  <p>OBClient depends on OceanBase Connector/C. Therefore, you must install OceanBase Connector/C first.  </p>
-</main>
-
-#### Compile the source code
-
-OceanBase Database provides the source code of the latest [OBClient](https://github.com/oceanbase/obclient) in its GitHub repository, which also includes sub-repositories.
-
-1. Install the dependency tool.
-
-   ```bash
-   sudo yum install -y git cmake gcc make openssl-devel ncurses-devel rpm-build  gcc-c++ bison bison-devel zlib-devel gnutls-devel libxml2-devel openssl-devel \
-   libevent-devel libaio-devel
-   ```
-
-2. Compile and package the code.
-
-   1. Download the [source code of OBClient](https://github.com/oceanbase/obclient), which also includes sub-repositories.
-
-      ```bash
-      git clone --recurse-submodules https://github.com/oceanbase/obclient
-      cd obclient
-      ```
-
-   2. Compile OceanBase Connector/C.
-
-      ```bash
-      cd obclient/libmariadb
-      sh build.sh
-      ```
-
-   3. Package up the RPM package of OceanBase Connector/C.
-
-      ```bash
-      cd rpm
-      sh libobclient-build.sh
-      ```
-
-   4. Compile OBClient.
-
-      ```bash
-      # Return to the OBClient directory.
-      cd ../..  
-      sh build.sh
-      ````
-
-   5. Package up the RPM package of OBClient.
-
-      ```bash
-      cd rpm
-      sh obclient-build.sh
-      ```
-
-3. Install OceanBase Connector/C and OBClient.
-
-   ```bash
-   cd obclient/libmariadb/rpm
-   sudo rpm -ivh libobclient-xx.x86_64.rpm
-
-   # Go to the obclient/rpm directory of OBClient.
-   cd ../../rpm
-   sudo rpm -ivh obclient-xx.x86_64.rpm
-   ```
-
-   <main id="notice" type='explain'>
-    <h4>Note</h4>
-    <p>OBClient depends on OceanBase Connector/C. Therefore, you must install OceanBase Connector/C first.  </p>
-   </main>
-
+```bash
+sudo yum install mariadb-devel
+```
 ### Step 3: Write an application
 
-An application interacts with an OBServer node by using OceanBase Connector/C in the following process:
+An application interacts with an OBServer node by using MySQL Connector/C in the following process:
 
 1. Call `mysql_library_init()` to initialize the MySQL library.
 
@@ -165,7 +84,7 @@ An application interacts with an OBServer node by using OceanBase Connector/C in
    mysql_close(mysql);
    ```
 
-8. Call `mysql_library_end()` to stop using OceanBase Connector/C.
+8. Call `mysql_library_end()` to stop using MariaDB client.
 
    ```c
    mysql_library_end();
@@ -184,11 +103,11 @@ int main(int argc, char** argv)
 {
   mysql_library_init(0, NULL, NULL);
   MYSQL *mysql = mysql_init(NULL);
-  char* host_name = "172.xx.xx.xx";// set your MySQL host
-  char* user_name = "r***"; // set your username
-  char* password = "******"; // set your password
-  char* db_name = "test"; // set your database name
-  int port_num = 2883; // set your MySQL port number
+  char* host_name = "xxx.xxx.xxx.xxx";//set your mysql host
+  char* user_name = "******"; //set your user_name
+  char* password = "******"; //set your password
+  char* db_name = "test"; //set your databasename
+  int port_num = 2883; //set your mysql port
   char* socket_name = NULL;
   MYSQL_RES* result;
   MYSQL_FIELD* fields;
@@ -205,7 +124,7 @@ int main(int argc, char** argv)
 
   /* execute multiple statements */
   status = mysql_query(mysql, "DROP TABLE IF EXISTS test_table;");
-
+                      
   if (status)
   {
     printf("Could not execute statement(s)");
@@ -232,7 +151,7 @@ int main(int argc, char** argv)
     printf("result: %d rows %d fields\n", num_rows, num_fields);
     printf("---------------------\n");
 
-    fields = mysql_fetch_fields(rs_metadata);
+    fields = mysql_fetch_fields(result);
 
     for (int i = 0; i < num_fields; ++i)
     {
@@ -267,7 +186,7 @@ int main(int argc, char** argv)
        printf("Could not retrieve result set\n");
      }
   }
-
+  
   status = mysql_query(mysql, "DROP TABLE test_table;");
 
   mysql_close(mysql);
@@ -279,7 +198,7 @@ Modify the database connection parameters in the code. Values of the parameters 
 
 * **host_name**: the IP address for connecting to OceanBase Database, which is sometimes the IP address of an ODP. The value of this parameter is obtained from the `-h` parameter.
 
-* **user_name**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The value of this parameter is obtained from the `-u` parameter. The default tenant of a cluster is 'sys', and the default administrator of a tenant is 'root'. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
+* **user_name**: the username for connecting to a tenant, in the format of **username@tenant name#cluster name**. The value of this parameter is obtained from the `-u` parameter. The default tenant of a cluster is `sys`, and the default administrator of a tenant is `root`. The cluster name is not required when you directly connect to OceanBase Database, but is required when you connect to OceanBase Database through an ODP.
 
 * **password**: the user password. The value of this parameter is obtained from the `-p` parameter.
 
@@ -289,36 +208,35 @@ Modify the database connection parameters in the code. Values of the parameters 
 
 ### Step 4: Run the application
 
-After you edit the code, run the following command:
+1. After you edit the code, run the following command:
 
-<main id="notice" type='explain'>
-  <h4>Note</h4>
-  <p>By default, OBClient is installed in the <code>/u01/obclient</code> directory.    </p>
-</main>
+   ```bash
+   g++ -I/u01/obclient/include/ -L/u01/obclient/lib -lobclnt mysql_test.c -o mysql_test
+   ```
+   The options are described as follows:
 
-```bash
-g++ -I/u01/obclient/include/ -L/u01/obclient/lib -lobclnt mysql_test.c -o mysql_test
-```
+   * `-I`: specifies the search path for the compiler search path so that it can find the header files. For example, if you want the compiler to find `mysql.h` in `/usr/include/mysql`, you would add that directory to the compiler's search path. You can use the command `find / -name mysql.h 2>/dev/null` to locate the `mysql.h` file path.
 
-After the compilation is completed, run the following command:
+   * `-L`: specifies the search path for dynamic-linked libraries.
 
-```bash
-# Specify the execution path.
-export LD_LIBRARY_PATH=/u01/obclient/lib
+   * `-l`: specifies the name of the library to be linked. If you use the `-l` option, remove the `lib` prefix and `.so` suffix from the library name. For example, in the above command, the library file name is `libmysqlclient.so`, but if you use the `-l` option, you only need to specify `mysqlclient`.
 
-# Run
-./mysql_test.
+2. Specify the running path.
+   ```shell
+   export LD_LIBRARY_PATH=/usr/lib64/mysql
+   ```
+3. Run the following command to run the application:
+   ```shell
+   ./mysql_test
+   ```
+   If the following results are returned, you have connected to OceanBase Database successfully, and the sample script is correctly executed.
+   ```shell
+   ---------------------
+   id      name
+   ---------------------
+   20      hangzhou
+   20      shanghai
+   ---------------------
+   ```
 
-# If the following results are returned, you have connected to OceanBase Database, and the sample script is correctly executed.
----------------------
-id      name
----------------------
-20      hangzhou
-20      shanghai
----------------------
-```
-
-<!-- ## More information
-
-For more information about how to install and use OceanBase Connector/C, see [OceanBase Connector/C Developer Guide](https://www.oceanbase.com/docs/community/connector-c-cn/V1.0.0/10000000000017244). -->
 
