--- a/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -25,7 +25,7 @@ This topic describes how to build a C application with OceanBase Database and Oc
 
 ### Step 1: Obtain a database connection string
 
-Obtain a database connection string from a database deployment engineer or administrator. Example:
+Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
 obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
@@ -33,7 +33,7 @@ obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
 
 The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
 
-Parameters:
+The parameters are described as follows:
 
 * **-h**: the IP address for connecting to OceanBase Database, which is sometimes the IP address of an OceanBase Database Proxy (ODP).
 
