--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -1,35 +1,35 @@
 # Login failure processing
 
-If OceanBase Database is in Oracle mode, for users who have multiple failed login attempts, the system will lock the user to prevent malicious password attacks, thereby improving database security.
+If OceanBase Database is in Oracle mode, for users who have multiple failed logon attempts, the system will lock the user to prevent malicious password attacks, thereby improving database security.
 
 The Oracle mode of OceanBase Database uses Profile to lock a user. 
 
 <main id="notice" >
   <h4>Applicability</h4>
-  <p>This topic applies only to OceanBase Database in Oracle mode. OceanBase Database Community Edition only supports MySQL mode. For login failure processing in MySQL mode, see <a href="../1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md">Login failure processing</a>. </p>
+  <p>This topic applies only to OceanBase Database in Oracle mode. OceanBase Database Community Edition only supports MySQL mode. For logon failure processing in MySQL mode, see <a href="../1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md">Login failure processing</a>. </p>
 </main>
 
 ## Concepts
 
-Profile is a means of limiting the resources available to a database user. In the Oracle mode of OceanBase Database, the profile is used to control a user's login verification policy. By using a user's profile file, it is possible to lock the user. 
+Profile is a means of limiting the resources available to a database user. In the Oracle mode of OceanBase Database, the profile is used to control a user's logon verification policy. By using a user's profile file, it is possible to lock the user. 
 
-The profile file provides two parameters to lock the user after multiple consecutive login failures:
+The profile file provides two parameters to lock the user after multiple consecutive logon failures:
 
-* `failed_login_attempts`: the number of consecutive failed login attempts. 
+* `failed_login_attempts`: the number of consecutive failed logon attempts. 
 * `password_lock_time`: the lock time, in days. 
 
 The lock and unlock policies are as follows:
 
-* Lock policy: When there are repeated failed login attempts due to an incorrect password, if the failure threshold is reached, the user will be locked out. 
+* Lock policy: When there are repeated failed logon attempts due to an incorrect password, if the failure threshold is reached, the user will be locked out. 
 * Unlock policy: If a logged-in user is locked out, when attempting to log in again, the system will check the lock time. If the lock time has expired, the system will unlock the user and the user attempts to log in again. If the lock time has not expired, the system will return an error. You can also use SQL statements to unlock the user. 
 
 ## Procedure
 
-The administrator can process login failures by creating a profile and applying it to users, which mainly includes the following two steps:
+The administrator can process logon failures by creating a profile and applying it to users, which mainly includes the following two steps:
 
 1. Create a profile. 
 
-   Use the `CREATE PROFILE` statement to create a profile and specify the number of consecutive login failures allowed for a user and the corresponding lock time. 
+   Use the `CREATE PROFILE` statement to create a profile and specify the number of consecutive logon failures allowed for a user and the corresponding lock time. 
 
    ```sql
    CREATE PROFILE "profile_name" LIMIT 
@@ -45,11 +45,11 @@ The administrator can process login failures by creating a profile and applying 
 
    * Executing this statement requires the `CREATE PROFILE` permission. 
 
-   * `FAILED_LOGIN_ATTEMPTS`: specifies the number of consecutive failed login attempts. 
+   * `FAILED_LOGIN_ATTEMPTS`: specifies the number of consecutive failed logon attempts. 
 
-      If this parameter is not specified, the setting of the `DEFAULT` profile will be used. The value of this parameter in the `DEFAULT` profile is `UNLIMITED`, which indicates that there is no limit to the number of consecutive failed login attempts. 
+      If this parameter is not specified, the setting of the `DEFAULT` profile will be used. The value of this parameter in the `DEFAULT` profile is `UNLIMITED`, which indicates that there is no limit to the number of consecutive failed logon attempts. 
 
-   * `PASSWORD_LOCK_TIME`: specifies the number of days that a user is locked out after a threshold for consecutive login failures has been reached. 
+   * `PASSWORD_LOCK_TIME`: specifies the number of days that a user is locked out after a threshold for consecutive logon failures has been reached. 
 
       If this parameter is not specified, the setting of the `DEFAULT` profile will be used. The value of this parameter in the `DEFAULT` profile is `UNLIMITED`, which indicates that there is no limit to the number of days a user will be locked out. 
 
@@ -106,9 +106,9 @@ The administrator can process login failures by creating a profile and applying 
    obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
    ```
 
-2. Create a profile and set up a policy for consecutive failed logins. 
+2. Create a profile and set up a policy for consecutive failed logons. 
 
-   Create a profile named `userprof1` that locks the user out for one day after five consecutive failed login attempts. 
+   Create a profile named `userprof1` that locks the user out for one day after five consecutive failed logon attempts. 
 
    ```shell
    obclient> CREATE PROFILE "userprof1" LIMIT FAILED_LOGIN_ATTEMPTS 5 
@@ -154,7 +154,7 @@ The administrator can process login failures by creating a profile and applying 
    ERROR 5039 (01007): User locked
    ```
 
-   Log on to the `sys` tenant using the `root` user and view information about failed login attempts. 
+   Log on to the `sys` tenant using the `root` user and view information about failed logon attempts. 
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
@@ -177,7 +177,7 @@ The administrator can process login failures by creating a profile and applying 
    obclient> ALTER USER secuser ACCOUNT UNLOCK;
    ```
 
-## Modify the login failure processing policy
+## Modify the logon failure processing policy
 
 Execute the `ALTER PROFILE` statement to modify an existing profile. 
 
