--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md
@@ -4,9 +4,9 @@ For queries to join multiple tables, an important task of the optimizer is to de
 
 To reduce the search range and memory usage for plan execution, the OceanBase Database optimizer uses the left-deep join tree to determine the join order. 
 
-<!-- The following figure shows the shapes of a left-deep tree, a right-deep tree, and a bushy tree.
+The following figure shows the shapes of a left-deep tree, a right-deep tree, and a bushy tree.
 
-![Trees](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9765994061/p180085.jpg) -->
+![Trees](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/EN_US/7.reference/3.performance-tunning-guide/Join%20order.jpg)
 
 OceanBase Database uses the System-R dynamic programming algorithm to generate the join order. It takes into account many factors, such as the possible access paths of each table, Interesting Order, join selectivity of different tables, and join algorithms (Nested Loop Join, Block Based Nested Loop Join, and Sort Merge Join).
 
