--- a/en-US/7.reference/4.development-reference/3.pl-reference/1.what-is-pl/3.pl-architecture.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/1.what-is-pl/3.pl-architecture.md
@@ -8,9 +8,9 @@ The following figure shows the interaction between the two engines.
 
 The PL engine consists of six modules: the parser, resolver, code generator, compiler, executor, and PL cache, among which the parser, resolver, code generator, and compiler form a complete PL compilation process. 
 
-<!-- The following figure shows the details.
+The following figure shows the details.
 
-![PL2](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2615260261/p270502.png) -->
+![PL2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/EN_US/7.reference/4.development-reference/PL%20compiler.jpg)
 
 * Parser (syntax parser)
 
