--- a/en-US/7.reference/4.development-reference/5.tableapi/2.use-of-the-tableapi-client/1.introduction-to-the-client-and-instructions-of-use.md
+++ b/en-US/7.reference/4.development-reference/5.tableapi/2.use-of-the-tableapi-client/1.introduction-to-the-client-and-instructions-of-use.md
@@ -10,9 +10,9 @@ In NoSQL mode, ob_table_client_java communicates with the OBServer node over the
 
 SQL queries involve complicated processes such as the parsing of SQL syntax and semantics and the generation of execution plans. In comparison, TableAPI provides nearly the same transaction handling and data storage capabilities and is easier to use. 
 
-<!-- The following flowchart shows the overall working process of the client:
+The following flowchart shows the overall working process of the client:
 
-![Workflow of the TableAPI client](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2696158361/p360403.png) -->
+![Workflow of the TableAPI client](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/EN_US/7.reference/4.development-reference/Client.jpg)
 
 ## Instructions for use
 
